@@ -62,6 +62,13 @@ static void     preferences_get_font_names            (gboolean          use_sys
                                                        gchar           **fixed);
 static gboolean preferences_update_fonts              (gpointer          unused);
 
+#define DH_CONF_PATH                  "/apps/devhelp"
+#define DH_CONF_USE_SYSTEM_FONTS      DH_CONF_PATH "/ui/use_system_fonts"
+#define DH_CONF_VARIABLE_FONT         DH_CONF_PATH "/ui/variable_font"
+#define DH_CONF_FIXED_FONT            DH_CONF_PATH "/ui/fixed_font"
+#define DH_CONF_SYSTEM_VARIABLE_FONT  "/desktop/gnome/interface/font_name"
+#define DH_CONF_SYSTEM_FIXED_FONT     "/desktop/gnome/interface/monospace_font_name"
+
 static DhPreferences *prefs;
 
 static void
