@@ -1,5 +1,11 @@
 2008-10-10  Richard Hult  <richard@imendio.com>
 
+	* src/dh-preferences.c:
+	* src/dh-preferences.h: Move key name defines from the header to
+	the C file, they are not used anywhere else now.
+
+2008-10-10  Richard Hult  <richard@imendio.com>
+
 	* src/dh-window.c: (window_populate): Remove the state saving and
 	use dh_util_state_*.
 
